Fix scrollbar in details popup

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -71,7 +71,7 @@
     }
 
     .skills {
-      overflow-y: hidden;
+      overflow: hidden;
       position: relative;
       height: 18px;
       width: 115px;
